--- a/HasToTex/HasToTex.csproj
+++ b/HasToTex/HasToTex.csproj
@@ -5,4 +5,9 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <Folder Include="Parser" />
+      <Folder Include="Tests" />
+    </ItemGroup>
+
 </Project>
